[package]
name = "kvs"
version = "0.1.0"
authors = ["William Speirs <bill.speirs@gmail.com>"]

[dependencies]
byteorder = "1.2"
itertools = "0.7"
log = "0.4"
#num_cpus = "1.0"
positioned-io = "0.2.2"
regex = "1.0.0"
rmp-serde = "0.13"
serde = "1.0"
serde_derive = "1.0"

[dev-dependencies]
rand = "0.4"
simple_logger = "0.5"
elapsed = "0.1"

[patch.crates-io]
positioned-io = { path = "/home/wspeirs/src/positioned-io" }
